# AI

./: .gitattributes  .gitignore  MIGRATION_GUIDE.md  MULTI_MODEL_GUIDE.md  README.md  crnn_drone_detector.pt  crnn_drone_detector_2.pt  example_usage.py  main.py  multi_model_examples.py  pyproject.toml  requirements.txt  test_real_world.py
configs/: train_config.yaml
models/: audiocnn2d.pth  audiocnn2d_best.pt  best_model_2dcnn_clean.pt
models/checkpoints/: AudioCNN2d.pth
notebooks/: 1dcnn.ipynb  2dcnn_mel_2.ipynb  2dcnn_mel_3.ipynb  2dcnn_mel_4.ipynb  2dcnn_mel_clean.py.ipynb  2dcnn_melspectogram.ipynb  augmented_dataset.ipynb  best_model.pth  best_model_2dcnn.pt  best_model_2dcnn_clean.pt  best_simple_cnn.pt  best_simple_cnn7.pt  create_dataset.ipynb  dataset_2.ipynb  drone_cnn.ipynb  eda.ipynb  split_audio.ipynb  test_dataset.ipynb  tools_for_datasets.ipynb
notebooks/AI/: 1.ipynb  best_simple_cnn.pt  inference_1.ipynb
notebooks/checkpoints/: audio_cnn.pth  test.ipynb
notebooks/computer_vision/: .gitignore  train_and_predict.ipynb
notebooks/dataset/: preprocess.ipynb  preprocess_save.ipynb  upload_dataset_to_huggingface.ipynb
notebooks/old/: 1dcnn.ipynb  2dcnn_mel_2.ipynb  2dcnn_mel_3.ipynb  2dcnn_mel_clean.py.ipynb  2dcnn_melspectogram.ipynb  aecm-net.ipynb  best_model_2dcnn_clean.pt  best_simple_cnn8.pt  create_dataset.ipynb  drone_cnn.ipynb  eda.ipynb  kekoukele.ipynb  test_dataset.ipynb  tools_for_datasets.ipynb
src/: __init__.py  arguments.py  config.py  logger.py  settings.py
src/data/: __init__.py  create_datasets.py  datasets.py  load_data.py  (+2 more)
(+107 files in other folders)
