[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorlog>=6.10.1",
    "datasets>=4.2.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "numpy>=2.0.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchcodec>=0.8.0",
    "torchmetrics>=1.8.2",
]
